--- a/Web/Views/Student/Delete.cshtml
+++ b/Web/Views/Student/Delete.cshtml
@@ -12,6 +12,7 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @*<label asp-for="FirstName">@Model.FirstName</label>*@
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
         <dd class = "col-sm-10">
