--- a/Web/Views/Student/Index.cshtml
+++ b/Web/Views/Student/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayFor(modelItem => student.FirstName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@student.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-firstname="@student.FirstName" asp-route-id="@student.Id" >Edit</a> |
                 <a asp-action="Details" asp-route-id="@student.Id">Details</a> |
                 <a asp-action="Delete" asp-route-firstname="@student.FirstName" asp-route-id="@student.Id"> Delete</a>
                   
