--- a/Web/Views/Student/Edit.cshtml
+++ b/Web/Views/Student/Edit.cshtml
@@ -14,12 +14,13 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
+                <input type="hidden" asp-for="RowVersion" />
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" asp-route-id="@Model.Id" asp-route-firstname="@Model.FirstName" value="Save" class="btn btn-primary" />
+                <input type="submit" asp-route-id="@Model.Id" asp-route-rowVersion="@Model.RowVersion" asp-route-firstname="@Model.FirstName" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
