--- a/Web/Views/Student/Edit.cshtml
+++ b/Web/Views/Student/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" asp-route-id="@Model.Id" asp-route-rowVersion="@Model.RowVersion" asp-route-firstname="@Model.FirstName" value="Save" class="btn btn-primary" />
+                <input type="submit" asp-route-id="@Model.Id"  value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
