--- a/Web/Views/Student/Delete.cshtml
+++ b/Web/Views/Student/Delete.cshtml
@@ -22,6 +22,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
+        <input type="hidden" asp-for="RowVersion" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
