Concurrency Messages to View Added - to Edit And Delete Works

--- a/Web/Views/Student/Edit.cshtml
+++ b/Web/Views/Student/Edit.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <label class="text-danger">@TempData["ConcurrencyConflictMsg"]</label>   
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input type="hidden" asp-for="RowVersion" />
@@ -20,7 +21,7 @@
             </div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <input type="submit" asp-route-id="@Model.Id"  value="Save" class="btn btn-primary" />
+                <input type="submit" asp-route-id="@Model.Id" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
