--- a/Web/Views/Student/Delete.cshtml
+++ b/Web/Views/Student/Delete.cshtml
@@ -11,19 +11,24 @@
     <h4>Student</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @*<label asp-for="FirstName">@Model.FirstName</label>*@
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
+        
+        @*<label id="infoMessage" class="text-danger"></label>*@
+        <label class="text-danger">@TempData["ConcurrencyConflictMsg"]</label>
+        <div asp-validation-summary="All" class="text-danger"></div>
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="RowVersion" />
+        <input type="hidden" asp-for="FirstName" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+        
 </div>
