Refactored to ViewModels I think.

--- a/Web/Views/Student/Index.cshtml
+++ b/Web/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Entities.Student>
+﻿@model IEnumerable<Domain.ViewModels.StudentViewModel>
 
 @{
     ViewData["Title"] = "Index";
