--- a/Web/Views/Student/Create.cshtml
+++ b/Web/Views/Student/Create.cshtml
@@ -12,12 +12,14 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group">   
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
                 <span asp-validation-for="FirstName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="text-danger">@TempData["Save-Error"]</label>
+                </br>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
