--- a/Web/Views/Account/Register.cshtml
+++ b/Web/Views/Account/Register.cshtml
@@ -36,6 +36,13 @@
 
 
 
+            
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+            </div>
+
+
             <button type="submit" class="btn btn-primary">Register</button>
 
 
