--- a/Web/Views/Administration/EditRole.cshtml
+++ b/Web/Views/Administration/EditRole.cshtml
@@ -69,8 +69,7 @@
 
 
         <div class="card-footer">
-            <a href="#" class="btn btn-primary" style="width:auto">Add Users</a>
-            <a href="#" class="btn btn-primary" style="width:auto">Remove Users</a>
+            <a asp-action="EditUsersInRole" asp-controller="Administration" asp-route-RoleId="@Model.Id" class="btn btn-primary" style="width:auto">Add or Remove Users</a>  
         </div>  
         
     </div>  
